--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -68,4 +68,80 @@
     <string name="error_http_401_site_authorization_failed">Ủy quyền %1$s đã dẫn đến lỗi.</string>
     <string name="error_http_403_site_forbidden">%1$s đã chặn quyền truy cập.</string>
     <string name="X_error_network_site_has_problems">Trang web không hoạt động như mong đợi.</string>
+    <string name="action_report">Báo cáo</string>
+    <string name="lbl_system_default">(Ứng dụng mặc định của hệ thống)</string>
+    <string name="lbl_about">Giới thiệu</string>
+    <string name="action_add">Thêm</string>
+    <string name="pc_advanced_options">Nâng cao</string>
+    <string name="lbl_backup">Sao lưu</string>
+    <string name="cancelled">Đã hủy</string>
+    <string name="action_clear">Xóa</string>
+    <string name="X_action_clear_credentials">Xóa thông tin xác thực</string>
+    <string name="lbl_color">Màu</string>
+    <string name="progress_msg_connecting">Đang kết nối…</string>
+    <string name="httpErrorFile">Không thể truy cập tệp.</string>
+    <string name="httpErrorAuth">Không thể xác thực.</string>
+    <string name="X_httpErrorIO">Không thể liên lạc với máy chủ. Hãy thử lại sau.</string>
+    <string name="httpErrorFileNotFound">Không thể tìm thấy tệp đã yêu cầu.</string>
+    <string name="httpError">Đã xảy ra lỗi mạng.</string>
+    <string name="lbl_country">Quốc gia</string>
+    <string name="action_create">Tạo</string>
+    <string name="X_btn_customize">Tùy chỉnh…</string>
+    <string name="lbl_defaults">Mặc định</string>
+    <string name="action_delete">Xóa</string>
+    <string name="lbl_tab_details">Chi tiết</string>
+    <string name="action_done">Xong</string>
+    <string name="action_edit">Chỉnh sửa</string>
+    <string name="action_edit_ellipsis">Chỉnh sửa…</string>
+    <string name="whichEditApplication">Chỉnh sửa bằng</string>
+    <string name="X_action_execute">Thực hiện</string>
+    <string name="action_export">Xuất</string>
+    <string name="lbl_filter">Bộ lọc</string>
+    <string name="lbl_search_filtered_by_x">Lọc theo: %1$s</string>
+    <string name="pt_bob_font_size">Cỡ chữ</string>
+    <string name="X_pg_general">Chung</string>
+    <string name="X_action_go">Đến</string>
+    <string name="action_help">Trợ giúp</string>
+    <string name="X_lbl_image">Hình ảnh</string>
+    <string name="option_import">Nhập</string>
+    <string name="action_import">Nhập</string>
+    <string name="lbl_import">Nhập</string>
+    <string name="lbl_language">Ngôn ngữ</string>
+    <string name="pt_ui_language">Ngôn ngữ</string>
+    <string name="action_learn_more">Tìm hiểu thêm</string>
+    <string name="progress_msg_loading">Đang tải…</string>
+    <string name="lbl_location">Vị trí</string>
+    <string name="action_more_ellipsis">Thêm…</string>
+    <string name="X_action_move">Chuyển</string>
+    <string name="lbl_name">Tên</string>
+    <string name="X_action_next">Tiếp theo</string>
+    <string name="no">Không</string>
+    <string name="none">Không</string>
+    <string name="lbl_tab_notes">Ghi chú</string>
+    <string name="preference_not_set">Chưa đặt</string>
+    <string name="whichViewApplication">Mở bằng</string>
+    <string name="action_show_options">Tùy chọn</string>
+    <string name="pe_camera_other">Khác</string>
+    <string name="password">Mật khẩu</string>
+    <string name="X_action_previous">Trước</string>
+    <string name="option_cover_replace">Thay thế…</string>
+    <string name="X_action_reset">Đặt lại</string>
+    <string name="action_reset_to_default">Đặt lại về mặc định</string>
+    <string name="action_retry">Thử lại</string>
+    <string name="action_save">Lưu</string>
+    <string name="action_search">Tìm kiếm</string>
+    <string name="X_action_send">Gửi</string>
+    <string name="X_whichSendToApplication">Gửi bằng</string>
+    <string name="lbl_settings">Cài đặt</string>
+    <string name="whichSendApplication">Chia sẻ</string>
+    <string name="action_skip">Bỏ qua</string>
+    <string name="lbl_storage_settings">Bộ nhớ</string>
+    <string name="pt_ui_system_locale">Ngôn ngữ hệ thống</string>
+    <string name="X_action_try_again">Thử lại</string>
+    <string name="action_undo">Hoàn tác</string>
+    <string name="unknown">Không xác định</string>
+    <string name="X_action_update">Cập nhật</string>
+    <string name="X_use_default_setting">Dùng chế độ cài đặt mặc định</string>
+    <string name="username">Tên người dùng</string>
+    <string name="yes">Có</string>
 </resources>
