--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,15 +70,16 @@
     <!-- endregion -->
 
     <!-- region ========== Order formatters. -->
-    <!-- two strings concatenated; only used for RTL languages -->
+    <!-- two strings concatenated without any space in between; support for RTL languages -->
     <string name="a_b">%1$s%2$s</string>
-    <!-- generic "label (info)" -->
+    <!-- generic "label (info)"; support for RTL languages -->
     <string name="a_bracket_b_bracket">%1$s (%2$s)</string>
-    <!-- generic "label: value" -->
+    <!-- generic "label: value"; support for RTL languages -->
     <string name="name_colon_value">%1$s: %2$s</string>
+
     <!-- When text is displayed in a list (without using HTML) each line will be formatted using this pattern. -->
     <string name="list_element">• %s</string>
-    <!-- "name #nr" -->
+    <!-- "name #nr" where the # is a potential language dependent symbol for 'number'.-->
     <string name="name_hash_nr">%1$s #%2$d</string>
     <!-- x and y are numbers; e.g.: 5 of 9 -->
     <string name="x_of_y">%1$d of %2$d</string>
