--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -772,4 +772,5 @@
     <string name="style_type_defaults">Valores predeterminados del estilo</string>
     <string name="acra_report_saved">Ya puedes visitar la página del proyecto en Github y registrar una nueva incidencia. Adjunta a la incidencia el informe guardado anteriormente. Si aún no tienes una cuenta de Github, tendrás que crear una.</string>
     <string name="action_report">Informar</string>
+    <string name="error_invalid_url">Dirección no válida (URL)</string>
 </resources>
