--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -763,4 +763,5 @@
     <string name="style_type_defaults">Paramètres par défaut des styles</string>
     <string name="acra_report_saved">Vous pouvez maintenant visiter la page du projet sur Github et enregistrer un nouveau problème. Veuillez joindre le rapport précédemment enregistré au problème. Si vous n’avez pas encore de compte Github, vous devez en créer un.</string>
     <string name="action_report">Rapport</string>
+    <string name="error_invalid_url">Adresse (URL) invalide</string>
 </resources>
