--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -780,4 +780,5 @@
     <string name="style_type_defaults">Domyślne ustawienia stylu</string>
     <string name="acra_report_saved">Możesz teraz odwiedzić stronę projektu na Github i zarejestrować nowe zgłoszenie. Do zgłoszenia należy dołączyć wcześniej zapisany raport. Jeśli nie masz jeszcze konta Github, musisz je utworzyć.</string>
     <string name="action_report">Zgłoś</string>
+    <string name="error_invalid_url">Nieprawidłowy adres (URL)</string>
 </resources>
