--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -777,4 +777,5 @@
     <string name="style_type_defaults">Настройки стилей по умолчанию</string>
     <string name="acra_report_saved">Теперь вы можете зайти на страницу проекта на Github и зарегистрировать новую проблему. Пожалуйста, прикрепите к проблеме сохраненный ранее отчет. Если у вас еще нет учетной записи на Github, вам необходимо ее создать.</string>
     <string name="action_report">Отправить отчет</string>
+    <string name="error_invalid_url">Неверный адрес (URL)</string>
 </resources>
