--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -770,4 +770,5 @@
     <string name="style_type_defaults">Stiller varsayılan ayarları</string>
     <string name="acra_report_saved">Artık Github’daki proje sayfasını ziyaret edebilir ve yeni bir sorun kaydedebilirsiniz. Lütfen daha önce kaydettiğiniz raporu soruna ekleyin. Henüz bir Github hesabınız yoksa, bir tane oluşturmanız gerekecektir.</string>
     <string name="action_report">Bildir</string>
+    <string name="error_invalid_url">Geçersiz adres (URL)</string>
 </resources>
