--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -305,5 +305,6 @@
     <string name="lbl_tab_notes">备注</string>
     <string name="action_show_options">选项</string>
     <string name="pt_ui_system_locale">N系统语言</string>
+    <string name="error_invalid_url">无效地址（URL）</string>
 
 </resources>
